# lancache-ng

./: .gitattributes  .gitignore  .shellspec  .tmp-bashcheck_.github_workflows_build-push.yml_blk_1.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_11.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_12.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_15.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_16.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_17.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_18.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_19.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_2.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_20.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_21.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_22.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_23.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_24.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_25.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_26.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_27.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_28.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_29.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_30.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_31.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_32.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_33.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_34.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_35.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_38.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_39.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_4.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_40.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_41.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_42.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_43.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_44.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_45.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_47.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_48.sh  .tmp-bashcheck_.github_workflows_build-push.yml_blk_49.sh  (+58 more)
.githooks/: pre-push
.github/: AGENTS.md  CODEOWNERS  actionlint.yaml  agents.md  codeql-config.yml  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: add-to-project.yml  backfill-stack-latest.yml  build-push-hosted-fallback.yml  build-push.yml  build-tools.yml  channel-install-smoke.yml  codeql.yml  current-dev-auto-close.yml  first-interaction.yml  full-setup-deep-validate.yml  full-setup-sims.yml  full-setup-validate.yml  gc-pr-staging-images.yml  labeler.yml  orphaned-branches.yml  release-drafter.yml  release-please.yml  update-changelog.yaml
certs/: generate-ca.sh
config/dev/: dhcp-proxy.env  dhcp.env  dns-ssl.env  dns-standard.env  ntp.env  proxy.env  watchdog.env
config/prod/: dhcp-proxy.env  dhcp.env  dns-ssl.env  ntp.env  (+3 more)
coverage/: rust-current_dev.json  rust-master.json  rust-v0.2.0.json  rust-v0.3.0.json
docs/: architecture-ng.md  backup-restore.md  ci-github-hosted-fallback-decision.md  ci-image-pinning-policy.md  design-steam-prefill.md  design-wireguard-remote-access.md  dhcp-modes.md  dns-admin-ui-scope.md  dnsmasq-dhcp-admin-ui-scope.md  how-to-change-ip.md  install-ca-cert.md  kea-dhcp-admin-ui-scope.md  known-good-config-snapshots.md  local-runner-docker-performance.md  naming-conventions.md  release-certification-checklist.md  release-external-images.md  release-validation-plan.md  release-versioning.md  self-hosted-actions-runner.md  threat-model.md  ui-rust-dev-checks.md  validation-state.json
release/: stack-images.yml
scripts/: check-action-node-versions.sh  check-bats-path-filter-coverage.sh  check-build-tools-smoke-coverage.sh  check-changelog-direct-edit.sh  check-executable-bits.sh  check-file-headers.sh  check-governance-guards.sh  check-idempotence-test-coverage.sh  check-language-policy.sh  check-line-endings.sh  check-logging-matrix.sh  check-mutable-refs.sh  check-naming-consistency.sh  check-orphaned-branches.sh  check-pr-title-convention.sh  check-pr-tracking-metadata.sh  check-stable-external-images.sh  check-validation-subnet-wrapper-coverage.sh  check-vex-drift.sh  check-workflow-service-lists.sh  classify-image-impact.sh  collect-changelog-entries.sh  compute-next-release-tag.sh  detect-full-setup-changes.sh  dhcp-kea-ctrl-agent-mutation-simulation.sh  dhcp-kea-lease-flow-simulation.sh  dhcp-kea-ui-rollback-simulation.sh  dhcp-proxy-pxe-simulation.sh  dhcp-relay-flow-simulation.sh  dns-zone-rollback-simulation.sh  docker-socket-proxy.sh  ensure-pr-staging-images.sh  full-setup-client-simulation.sh  generate-vex.sh  install-ca-cert.ps1  install-ca-cert.sh  nats-secondary-auth-callout-simulation.sh  plan-deep-validation.sh  require-image-platforms.sh  select-build-tools-image.sh  (+13 more)
services/dns/nats-subscriber/: Cargo.toml  go.mod  main.go
services/dns/nats-subscriber/src/: main.rs  nats_publish.rs  rollback_listener.rs  zone_snapshots.rs
services/ui/: .dockerignore  Cargo.toml  Dockerfile  dhcp-probe.sh  docker-entrypoint.sh
services/ui/src/: config.rs  dns_probe.rs  docker_client.rs  kea_snapshots.rs  main.rs  nats_auth_callout.rs  nats_config.rs  nats_kick.rs  nginx_client.rs  reverse_dns.rs  session.rs  syslog_client.rs  watchdog_status.rs
services/ui/src/routes/: cache.rs  dashboard.rs  dhcp.rs  dns_snapshots.rs  domains.rs  logs.rs  mod.rs  netdata_proxy.rs  ntp.rs  secondaries.rs  setup.rs  stats.rs
services/ui/src/static/: admin.css
services/ui/src/templates/: base.html  dashboard.html  dhcp.html  domains.html  logs.html  ntp.html  secondaries.html  setup.html  stats.html
tests/: setup-migration-semantics.sh
tools/pxe-client-probe/: Cargo.toml
tools/pxe-client-probe/src/: main.rs
(+220 files in other folders)
