# lancache-ng (https://github.com/wiki-mod/lancache-ng)
# Manifest for the lancache-ui monitoring dashboard.

[package]
name = "lancache-ui"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "lancache-ui"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["form"] }
tokio = { version = "1", features = ["full"] }
tera = "2"
bollard = "0.21"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
base64 = "0.22"
futures-util = "0.3"
async-nats = "0.49"
rusqlite = { version = "0.40", features = ["bundled"] }
rand = "0.10"
hex = "0.4"
form_urlencoded = "1"
subtle = "2"
sha2 = "0.11"
