# lancache-ng (https://github.com/wiki-mod/lancache-ng)
# Manifest for the lancache-ui monitoring dashboard.

[package]
name = "lancache-ui"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "lancache-ui"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["form"] }
tokio = { version = "1", features = ["full"] }
tera = "2"
bollard = "0.21"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
base64 = "0.22"
futures-util = "0.3"
async-nats = "0.49"
rusqlite = { version = "0.40", features = ["bundled"] }
rand = "0.10"
hex = "0.4"
form_urlencoded = "1"
subtle = "2"
sha2 = "0.11"
nkeys = "0.4"
data-encoding = "2"
# Transparent decompression of syslog-ng's rotated log output (#633:
# syslog_client.rs). syslog-ng compresses rotated files with zstd, falling
# back to gzip only if zstd could not be installed at container start (see
# deploy/*/docker-compose.yml's syslog-ng rotation loop) -- both crates are
# needed so the Admin UI reader can transparently read either outcome.
zstd = "0.13"
flate2 = "1"

[dev-dependencies]
# Only used by the basic_auth integration test (main.rs), to drive real
# axum::extract::Request values through the actual Router + middleware stack
# via ServiceExt::oneshot -- axum itself depends on tower already, so this
# adds no new runtime behavior, just the test-only `util` feature that
# exposes `oneshot`.
tower = { version = "0.5", default-features = false, features = ["util"] }
