[package]
name = "nats-subscriber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nats-subscriber"
path = "src/main.rs"

[dependencies]
async-nats = "0.35"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
